refactor(pages): overhaul Selenium page objects and UI test suite